        zope.app.session now define a get method. This method can be
        used to check if a specific session key is defined without
        automatically creating it.

      - The "Session Credentials" authentication plugin does not write
        session data for anonymous requests. This reduces zodb
        conflicts for high-traffic sites with many anonymous requests.

    Restructuring

      - ``ClientForm`` changed from a file based module to a package.

      - Changed internal widget API to allow retrieving the current value
        (from request, default or current field value) in addition to the
        current form representation of the value.

      - Refactored zope.decorator into zope.proxy.decorator and
        zope.security.decorator.

      - Deprecated directive <zope:localUtility>, replaced by <zope:class>.

      - Removed deprecated directive <zope:defaultLayer>.

      - Removed deprecated argument 'outstream' from ``zope.publisher``
        API, and removed other deprecated code.

      - Removed deprecated aliases:

        * ``UniqueIdUtility`` for ``IntIds``

        * ``ReferenceToPersistent`` for ``KeyReferenceToPersistent``

        * ``zope.app.uniqueid`` for ``zope.app.intid``

        * ``HTTP`` for ``WSGI-HTTP``

        * ``PostmortemDebuggingHTTP`` for ``WSGI-PostmortemDebuggingHTTP``

        * ``PublisherHTTPServer`` for ``PMDBHTTPServer``

        * ``IBrowserIdManager`` for ``IClientIdManager``

      - Removed deprecated ``zope.app.file.interfaces.IFileContent``.
        Use ``zope.app.publication.interfaces.IFileContent``.

      - Removed deprecated ``zope.app.form.CustomSequenceWidgetFactory``.
        Use ``zope.app.form.CustomWidgetFactory``.

      - Removed deprecated services:
        ``IErrorReportingService``, ``ILocalErrorReportingService``,
        ``IPrincipalAnnotationService``, ``IAuthenticationService``.
        They are replaced by Utilities.

      - Removed deprecated methods: