@@ -69,6 +69,7 @@ locales
 wsgi
 zopeappgenerations
 zapi
+zcmlfiles
 
 # BBB 2006/05/01 -- to be removed after 12 months
 
