@@ -2,7 +2,7 @@
 
   <include files="package-includes/*-meta.zcml" />
 
-  <include package="zope.app" />
+  <include package="zope.app.zcmlfiles" />
 
   <include files="package-includes/*-configure.zcml" />
 
